--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/express": "^1.7.24",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
     "svix": "^1.74.1"
   },
   "devDependencies": {
