--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/express": "^1.7.24",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
@@ -21,6 +21,7 @@
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
+    "stripe": "^18.5.0",
     "svix": "^1.74.1"
   },
   "devDependencies": {
